@@ -6,7 +6,11 @@ module ActiveScaffold::DataStructures
         nested_info[:name] = (params[:association] || params[:named_scope]).to_sym
         nested_info[:parent_scaffold] = "#{params[:parent_scaffold].to_s.camelize}Controller".constantize
         nested_info[:parent_model] = nested_info[:parent_scaffold].active_scaffold_config.model
-        nested_info[:parent_id] = params[nested_info[:parent_model].name.foreign_key]
+        nested_info[:parent_id] = if params[:association].nil?
+          params[nested_info[:parent_model].name.foreign_key]
+        else
+          params[nested_info[:parent_model].reflect_on_association(params[:association].to_sym).active_record.name.foreign_key]
+        end
         if nested_info[:parent_id]
           unless params[:association].nil?
             ActiveScaffold::DataStructures::NestedInfoAssociation.new(model, nested_info)
