@@ -5,6 +5,7 @@
 - Allow to set arrays in search_sql so one column can search in multiple db columns, resulting sql chunks will be OR'ed
 - Hide text input on searching for null or not null
 - Add some classes to forms to improve CSS customization
+- Fix nested links for STI controllers with common configuration in a base controller
 
 = 3.2.12
 - improve support for tableless models, add support for count
